# TutorialMaker

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  README_DESKTOP.md  SERVER_USAGE.md  USER_GUIDE.md  __main__.py  build_instructions.md  build_local.bat  build_local.ps1  create_test_data.py  debug_permissions.py  export_tutorials.py  main.py  pyproject.toml  requirements.txt  server.py  start_web_server.py  start_web_server_safe.py  test_build.md  test_export.py  test_gui_minimal.py  test_imports.py  tutorialmaker.spec
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml.disabled  ci-cd.yml  release.yml  release.yml.disabled  test.yml
scripts/: README.md  check_permissions.py  convert_prints_to_logging.py  replace_app_prints.py
src/: __init__.py  __version__.py
src/core/: app.py  capture.py  coordinate_handler.py  event_filter.py  event_processor.py  event_queue.py  events.py  exporters.py  logger.py  ocr.py  screenshot_processor.py  session_logger.py  session_manager.py  smart_ocr.py  storage.py
src/gui/: __init__.py  desktop_app.py  hotkeys.py  main_window.py  recording_controls.py  screen_selector.py  settings_dialog.py  system_tray.py
src/utils/: api_utils.py  dev_utils.py  file_utils.py  tesseract_bundle.py
src/web/: route_helpers.py  server.py
src/web/static/css/: tutorial.css
src/web/static/js/: api-utils.js  tutorial.js  ui-utils.js
src/web/templates/: base.html  error.html  index.html  tutorial.html  tutorial_error.html  tutorial_not_found.html
tests/: TESTING.md  run_tests.py  test_basic_imports.py  test_coordinate_fix.py  test_coordinate_handler_integration.py  test_coordinate_system_handler.py  test_event_filter.py  test_event_processor.py  test_integration.py  test_integration_simple.py  test_mouse_click_accuracy.py  test_realtime_integration.py  test_realtime_step_feedback.py  test_runner.py  test_screenshot_marker.py  test_screenshot_size.py  test_session_manager.py
