[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tutorialmaker"
description = "Privacy-focused, local-only screen recording tutorial maker"
readme = "README.md"
authors = [
    {name = "TutorialMaker Contributors"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Documentation"
]
keywords = ["screen-recording", "tutorials", "ocr", "privacy", "local"]
requires-python = ">=3.9"
dependencies = [
    "mss>=9.0.1",
    "pynput>=1.7.6",
    "pillow>=10.0.0",
    "numpy>=1.21.0,<2.3.0",
    "opencv-python-headless>=4.6.0",
    "pytesseract>=0.3.10",
    "easyocr>=1.7.0",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "python-docx>=0.8.11",
    "reportlab>=4.0.0",
    "markdown>=3.4.0"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]
gui = [
    "PyQt5>=5.15.0",
    "plyer>=2.1.0"
]

[project.urls]
"Homepage" = "https://github.com/YOUR_USERNAME/scribe_local"
"Bug Reports" = "https://github.com/YOUR_USERNAME/scribe_local/issues"
"Source" = "https://github.com/YOUR_USERNAME/scribe_local"
"Documentation" = "https://github.com/YOUR_USERNAME/scribe_local/blob/main/README.md"

[project.scripts]
tutorialmaker = "__main__:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src --cov-report=term-missing --cov-report=html"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "mss.*",
    "pynput.*",
    "pytesseract.*",
    "easyocr.*",
    "cv2.*"
]
ignore_missing_imports = true